--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,24 @@ html, body {
   background: #FFf;
 }
 a {
+  color: #00B198;
 	transition: 0.2s all;
 	-webkit-transition: 0.2s all;
 	-moz-transition: 0.2s all;
 	-o-transition: 0.2s all;
 	-ms-transition: 0.2s all;
 }
-a:hover {
- text-decoration: none;
+a,
+a:link,
+a:hover,
+a:focus,
+a:active,
+a:visited {
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  color: #e74c3c;
 }
 input[type="button"],input[type="submit"],select {
 	transition: 0.2s all;
@@ -489,9 +499,6 @@ a.sign {
   font-weight:400;
   text-transform: uppercase;
   margin-bottom: 0.5em;
-}
-.story-grid h4 a {
-  color: #00B198;
 }
 .story-grid p {
   text-align: center;
