--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,7 @@ a.sign {
   text-align: center;
 }
 .about-section p {
-  font-size: 0.9em;;
+  font-size: 0.9em;
   line-height: 1.8em;
   color: #2F3338;
 }
@@ -669,7 +669,7 @@ a.sign {
   width: 100%;
 }
 .responsive-iframe iframe {
-  height: 100%
+  height: 100%;
   left: 0px;
   position: absolute;
   top: 0px;
